--- a/po/ru/LC_MESSAGES/titan.po_auto.po
+++ b/po/ru/LC_MESSAGES/titan.po_auto.po
@@ -7187,7 +7187,7 @@ msgstr ""
 
 #: skin_default_skin.xml.h:319
 msgid ""
-"Here you can set your manuel Channel search options. Very important, before "
+"Here you can set your Manual Channel search options. Very important, before "
 "you start looking for a channel must be set to its tuner tuner settings."
 msgstr ""
 
