--- a/po/es/LC_MESSAGES/titan.po_auto.po
+++ b/po/es/LC_MESSAGES/titan.po_auto.po
@@ -7409,7 +7409,7 @@ msgstr "Aqui usted puede configurar el idioma."
 
 #: skin_default_skin.xml.h:320
 msgid ""
-"Here you can set your manuel Channel search options. Very important, before "
+"Here you can set your Manual Channel search options. Very important, before "
 "you start looking for a channel must be set to its tuner tuner settings."
 msgstr ""
 
