[titan] autoupdate po files

--- a/po/fr/LC_MESSAGES/titan.po_auto.po
+++ b/po/fr/LC_MESSAGES/titan.po_auto.po
@@ -9722,7 +9722,7 @@ msgid "Default Font "
 msgstr ""
 
 #: tpk_description.h:49
-msgid "default Settings 19.2 Astra 13.0 Hotbird KabelD"
+msgid "default Settings 19.2 Astra"
 msgstr ""
 
 #: tpk_description.h:50
@@ -10918,7 +10918,7 @@ msgid "Screensaver Travel World"
 msgstr ""
 
 #: tpk_showname.h:155
-msgid "Settings 19.2 Astra 13.0 Hotbird KabelD"
+msgid "Settings 19.2 Astra"
 msgstr ""
 
 #: tpk_showname.h:156
