--- a/po/nl/LC_MESSAGES/titan.po_auto.po
+++ b/po/nl/LC_MESSAGES/titan.po_auto.po
@@ -9905,7 +9905,7 @@ msgid "Default Font "
 msgstr "Standaard lettertype"
 
 #: tpk_description.h:49
-msgid "default Settings 19.2 Astra 13.0 Hotbird KabelD"
+msgid "default Settings 19.2 Astra"
 msgstr ""
 
 #: tpk_description.h:50
@@ -11101,7 +11101,7 @@ msgid "Screensaver Travel World"
 msgstr ""
 
 #: tpk_showname.h:155
-msgid "Settings 19.2 Astra 13.0 Hotbird KabelD"
+msgid "Settings 19.2 Astra"
 msgstr ""
 
 #: tpk_showname.h:156
