--- a/po/vi/LC_MESSAGES/titan.po_auto.po
+++ b/po/vi/LC_MESSAGES/titan.po_auto.po
@@ -9808,7 +9808,7 @@ msgid "Default Font "
 msgstr "Biểu tượng mặc định"
 
 #: tpk_description.h:49
-msgid "default Settings 19.2 Astra 13.0 Hotbird KabelD"
+msgid "default Settings 19.2 Astra"
 msgstr ""
 
 #: tpk_description.h:50
@@ -11004,7 +11004,7 @@ msgid "Screensaver Travel World"
 msgstr "khoảng thời gian màn hình chờ"
 
 #: tpk_showname.h:155
-msgid "Settings 19.2 Astra 13.0 Hotbird KabelD"
+msgid "Settings 19.2 Astra"
 msgstr ""
 
 #: tpk_showname.h:156
