--- a/po/de/LC_MESSAGES/titan.po_auto.po
+++ b/po/de/LC_MESSAGES/titan.po_auto.po
@@ -3946,7 +3946,7 @@ msgstr ""
 "Dieses Video wurde gelöscht. Wir entschuldigen uns für die "
 "Unannehmlichkeiten."
 
-#: player.h:981
+#: player.h:983
 msgid "Buffering Stream - Cancel with Exit"
 msgstr ""
 
@@ -10265,7 +10265,7 @@ msgid "MetrixHD skin for TitanNit. Use transparent XPicons."
 msgstr ""
 
 #: tpk_description.h:102
-msgid "Midnigght Commander, a file manager for the command line"
+msgid "Midnight Commander, a file manager for the command line"
 msgstr ""
 
 #: tpk_description.h:103
