--- a/po/de/LC_MESSAGES/titan.po_auto.po
+++ b/po/de/LC_MESSAGES/titan.po_auto.po
@@ -9429,7 +9429,7 @@ msgstr "TiThek Haftungsausschluss:"
 
 #: tithek.h:1534 tithek.h:1667 tithek.h:2085 tithek.h:2099 tithek.h:2109
 #: tithek.h:2124
-msgid "Tithek - Mainmenu - Favoriten"
+msgid "Tithek - Mainmenü - Favoriten"
 msgstr "Tithek - Hauptmenu - Favoriten"
 
 #: tithek.h:1536 tithek.h:2126
